examples/kubernetes/envoy-als.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-als
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-als
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "19001"
      labels:
        app: envoy-als
    spec:
      containers:
        - name: envoy-als
          command:
            - sh
            - "-c"
            - "cp -a /app /app-live && cd /app-live && go run . "
          image: golang:1.22.3-alpine
          ports:
            - containerPort: 8080
            - containerPort: 19001
          volumeMounts:
            - name: envoy-als
              mountPath: /app
      volumes:
        - name: envoy-als
          configMap:
            name: envoy-als
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-als
spec:
  selector:
    app: envoy-als
  type: LoadBalancer
  ports:
    - name: grpc-als
      protocol: TCP
      appProtocol: grpc
      port: 8080
      targetPort: 8080
    - name: http-monitoring
      protocol: TCP
      port: 19001
      targetPort: 19001
