examples/kubernetes/ext-auth-http-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-ext-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-ext-auth
  template:
    metadata:
      labels:
        app: http-ext-auth
    spec:
      containers:
      - name: http-ext-auth
        command:
        - node
        - /usr/src/app/http-ext-auth.js
        image: node:19-bullseye
        ports:
        - containerPort: 9002
        volumeMounts:
        - name: http-ext-auth
          mountPath: /usr/src/app
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: authorization
              value: "Bearer token1"
            port: 9002
      volumes:
      - name: http-ext-auth
        configMap:
          name: http-ext-auth
---
apiVersion: v1
kind: Service
metadata:
  name: http-ext-auth
spec:
  selector:
    app: http-ext-auth
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
