examples/kubernetes/grpc-routing.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: grpc
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: grpc
spec:
  gatewayClassName: grpc
  listeners:
    - name: hello
      protocol: HTTP
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      # serviceAccountName: hello
      containers:
        - image: quyenhoang/hello:lastest
          imagePullPolicy: IfNotPresent
          name: hello
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
  - name: hello
    port: 50051
    targetPort: 50051
  selector:
    app: hello

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: hello
spec:
  parentRefs:
  - name: grpc
  # hostnames:
  # - "example.com"
  rules:
  - backendRefs:
    - name: hello
      port: 50051
# ---
# apiVersion: gateway.networking.k8s.io/v1alpha2
# kind: TCPRoute
# metadata:
#   name: hello1
# spec:
#   parentRefs:
#   - name: grpc
#   # hostnames:
#   # - "example.com"
#   rules:
#   - backendRefs:
#     - name: hello
#       port: 50051
