examples/kubernetes/zone-routing.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.kubernetes.io/topology-mode: Auto
  name: zone-routing-backend
  labels:
    app: zone-routing-backend
    service: zone-routing-backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: zone-routing-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone-routing-backend-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zone-routing-backend
      version: v1
  template:
    metadata:
      labels:
        app: zone-routing-backend
        version: v1
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "gateway.envoyproxy.io/owning-gateway-name"
                    operator: In
                    values:
                      - eg
                  - key: "app.kubernetes.io/component"
                    operator: In
                    values:
                      - proxy
              topologyKey: topology.kubernetes.io/zone
              namespaceSelector: {}
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone-routing-backend-nonlocal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zone-routing-backend
      version: v1
  template:
    metadata:
      labels:
        app: zone-routing-backend
        version: v1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "gateway.envoyproxy.io/owning-gateway-name"
                    operator: In
                    values:
                      - same-namespace
                  - key: "app.kubernetes.io/component"
                    operator: In
                    values:
                      - proxy
              topologyKey: topology.kubernetes.io/zone
              namespaceSelector: {}
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zone-routing
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: zone-routing-backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /zone-routing
